--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 GlobalDefaultGameMode="/Script/ProjectSuckerGun.ProjectSuckerGunGameMode"
+GameInstanceClass=/Game/ThirdPerson/Blueprints/BP_PSGGameInstance.BP_PSGGameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
